# Daradata-assignment-1

./: README.md  pt_life_expectancy_test.csv  pyproject.toml
.github/workflows/: python-package.yml
life_expectancy/: clean_files.py  cleaning.py  load_save.py  pipeline.py  pt_life_expectancy.csv
life_expectancy/data/: pt_life_expectancy.csv
life_expectancy/tests/: __init__.py  conftest.py  test_clean_files.py  test_cleaning.py  test_load_save.py
